@@ -6,6 +6,10 @@
 Version 0.1.2a   2012-08-25
     * Move "awful" and naive algorithms into their own namespace.
     * Improve documentation for such awful algorithms.
+    * "Probably prime" warnings now default to off.
+    * Use an explicit function argument instead of a global variable
+      for "probably prime" warnings.
+    * Allow probabilistic primality tests to set the number of trials.
 
 Version 0.1.1a   2012-02-22
     * Work around mbcs bug in distutils: see issue 10945 on the Python
